中间件/数据库/dbms/MySQL/实时数据同步/canal/线上/prod/ingress.yaml
---
# 外部域名
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql-canal
  namespace: wjh-prod
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
    - host: mysql-canal.dev.local.
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mysql-canal
                port:
                  number: 80
